* Now layout.tsx from /app/[locale]/(home) defines the main spacing, which i should have done initially. Minor enhancements.     * layout.tsx: added a main tag to wrap the content and set the spacing between sections. Also added a div to wrap the presentation and projects sections, so they are grouped together and have a different spacing from the contact and blog sections.     * loading.tsx: Now imports HomePageSkeleton skeleton loader instead of the placeholder spinner loader.     * HomePageSkeleton: added a skeleton loader for home page, which includes a skeleton for the presentation section and a skeleton for the projects section. The presentation skeleton includes a skeleton for the profile picture, name, and description. The projects skeleton includes a skeleton for the project cards.     * DevelopmentCard: Adjusted colors, and language to match the app.     * common.json and resume.json: updated some translations and added new ones for pages that are "in development".

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -34,7 +34,8 @@
         "button-report": "Report Error"
     }, 
 
-    "test": {
-        "title": "English Translation"
+    "development": {
+        "title": "In Development...", 
+        "description": "Sorry, the page you landed is currently on development, come back in the future to see the content."
     }
 }
