--- a/src/locales/en/resume.json
+++ b/src/locales/en/resume.json
@@ -13,7 +13,7 @@
         "heading-2": "My Studio",  
         "heading-web": "Web Development",
         "heading-devops": "Dev Ops",
-        "p-1": "I have been coding for 2 years, starting my journey doing online courses on how to build simple websites with HTML, CSS, JavaScript & PHP.", 
+        "p-1": "I've been coding for 2 years, starting my journey doing online Udemy courses on how to build simple websites with HTML, CSS, JavaScript & PHP.", 
         "p-2": "My love for Web Development started with a simple HTML & CSS website when i saw how some weird words translated into actual things. Since then, i just couldn't stop.", 
         "p-3": "As i went deeper & deeper, i started focusing heavily in the React.js ecosystem. Now i specialize in building Modern Aplications using Next.js or MERN Stack.",
         "p-resume": "thomas.dev is more than just a portfolio; it's a window into my own world, where passion meets purpose. Discover my journey and my work.",
